--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </style>
 </head>
 <body>
+  <div class="fill">
   <div class="grid-container">
     <div class="conteudo">
       <h1>Join our community</h1> 
@@ -59,7 +60,7 @@
       
     </div>
   </div>
-  
+</div>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
